[package]
name = "mongodb-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["cargo", "env", "derive"] }
env_logger = "0.10"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
mongodb = "2.4.0"
serde_json = "1.0"
metrics-runtime = "0.13"
futures = "0.3"
